--- a/configuration/cloudformation/infra/vpc.yaml
+++ b/configuration/cloudformation/infra/vpc.yaml
@@ -45,7 +45,10 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC 
-      AvailabilityZone: !Select  [ 0, !GetAZs ""]
+      AvailabilityZone:
+        Fn::Select: 
+        - 0
+        - Fn::GetAZs: {Ref: 'AWS::Region'}
       CidrBlock: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']
       MapPublicIpOnLaunch: true
       Tags:
@@ -56,7 +59,10 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC 
-      AvailabilityZone: !Select [0, !GetAZs ""]
+      AvailabilityZone:
+        Fn::Select: 
+        - 0
+        - Fn::GetAZs: {Ref: 'AWS::Region'}
       CidrBlock: !FindInMap ['SubnetConfig', 'PublicTwo', 'CIDR']
       MapPublicIpOnLaunch: true
       Tags:
@@ -67,7 +73,10 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [0, !GetAZs ""]
+      AvailabilityZone:
+        Fn::Select: 
+        - 0
+        - Fn::GetAZs: {Ref: 'AWS::Region'}
       CidrBlock: !FindInMap ['SubnetConfig', 'PrivateOne', 'CIDR']
       MapPublicIpOnLaunch: false
       Tags:
@@ -78,7 +87,10 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Select [0, !GetAZs ""]
+      AvailabilityZone:
+        Fn::Select: 
+        - 0
+        - Fn::GetAZs: {Ref: 'AWS::Region'}
       CidrBlock: !FindInMap ['SubnetConfig', 'PrivateTwo', 'CIDR']
       MapPublicIpOnLaunch: false
       Tags:
