--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -205,6 +205,10 @@ Resources:
                 RoleArn: !GetAtt CloudFormationRole.Arn
                 StackName: global
                 TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/global/global.yaml
+                ParameterOverrides: !Sub |
+                  {
+                    "AppName" : "${AppName}"
+                  }
               RunOrder: 2
 
 
