--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -52,7 +52,7 @@ Resources:
   CloudFormationRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub ${AppName}-${Environment}-cloudformation-role
+      RoleName: !Sub ${AppName}-${Environment}-${AWS::Region}-cloudformation-role
       AssumeRolePolicyDocument:
         Statement:
         - Effect: Allow
@@ -69,7 +69,7 @@ Resources:
     DependsOn: CloudFormationRole 
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub ${AppName}-${Environment}-codebuild-role
+      RoleName: !Sub ${AppName}-${Environment}-${AWS::Region}-codebuild-role
       AssumeRolePolicyDocument:
         Statement:
           - Action: ['sts:AssumeRole']
@@ -84,7 +84,7 @@ Resources:
     DependsOn: CloudFormationRole 
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub ${AppName}-${Environment}-codepipeline-role
+      RoleName: !Sub ${AppName}-${Environment}-${AWS::Region}-codepipeline-role
       AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
@@ -100,7 +100,7 @@ Resources:
     DependsOn: CloudFormationRole
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub ${AppName}-${Environment}-codepipeline-artifacts
+      BucketName: !Sub ${AppName}-${Environment}-${AWS::Region}-codepipeline-artifacts
       VersioningConfiguration:
         Status: Enabled
 
