--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -135,12 +135,6 @@ Resources:
       Artifacts:
         Type: CODEPIPELINE
       TimeoutInMinutes: 120
-      
-  ##This is required before build.     
-  NodeECR:
-    Type: AWS::ECR::Repository
-    Properties:
-      RepositoryName: node
 
   CodePipeline:
     DependsOn: CodePipelineRole 
@@ -181,9 +175,10 @@ Resources:
               InputArtifacts:
                 - Name: SourceCodeOutputArtifact
               Configuration:
-                ActionMode: CREATE_UPDATE
+                ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_NAMED_IAM
                 RoleArn: !GetAtt CloudFormationRole.Arn
+                ChangeSetName: pipelinechangeset
                 StackName: !Sub ${AWS::StackName}
                 TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/pipeline/pipeline-prod.yaml
                 ParameterOverrides: !Sub |
@@ -206,17 +201,17 @@ Resources:
               InputArtifacts:
                 - Name: SourceCodeOutputArtifact
               Configuration:
-                ActionMode: CREATE_UPDATE
+                ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_NAMED_IAM
                 RoleArn: !GetAtt CloudFormationRole.Arn
                 StackName: global
+                ChangeSetName: globalchangeset
                 TemplatePath: !Sub SourceCodeOutputArtifact::configuration/cloudformation/global/global.yaml
                 ParameterOverrides: !Sub |
                   {
                     "AppName" : "${AppName}"
                   }
               RunOrder: 2
-
 
             - Name: UpdateVpcStack
               ActionTypeId:
@@ -227,10 +222,11 @@ Resources:
               InputArtifacts:
                 - Name: SourceCodeOutputArtifact
               Configuration:
-                ActionMode: CREATE_UPDATE
+                ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_NAMED_IAM
                 RoleArn: !GetAtt CloudFormationRole.Arn
                 StackName: !Sub ${AppName}-${Environment}-vpc
+                ChangeSetName: vpcchangeset
                 TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/infra/vpc.yaml
                 ParameterOverrides: !Sub |
                   {
@@ -239,21 +235,6 @@ Resources:
                   }
               RunOrder: 3
 
-        - Name: Build
-          Actions:
-            - Name: CodeBuild
-              ActionTypeId:
-                Category: Build
-                Owner: AWS
-                Version: 1
-                Provider: CodeBuild
-              InputArtifacts:
-                - Name: SourceCodeOutputArtifact
-              OutputArtifacts:
-                - Name: BuildOutputArtifact
-              Configuration:
-                ProjectName: !Ref CodeBuildProject
-              RunOrder: 1
 
         - Name: Deploy
           Actions:
@@ -266,10 +247,11 @@ Resources:
               InputArtifacts:
                 - Name: SourceCodeOutputArtifact
               Configuration:
-                ActionMode: CREATE_UPDATE
+                ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_NAMED_IAM
                 RoleArn: !GetAtt CloudFormationRole.Arn
                 StackName: !Sub ${AppName}-${Environment}-ecs
+                ChangeSetName: ecschangeset
                 TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/infra/ecs.yaml
                 ParameterOverrides: !Sub |
                   {
@@ -277,6 +259,66 @@ Resources:
                     "AppName" : "${AppName}"
                   }
               RunOrder: 3
+
+        - Name: Execute
+          Actions:
+            - Name: ExecutePipelineChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              Configuration:
+                ActionMode: CHANGE_SET_EXECUTE
+                ChangeSetName: pipelinechangeset
+                RoleArn: !ImportValue CloudFormationRole
+                StackName: !Sub SourceCodeOutputArtifact::configuration/cloudformation/pipeline/pipeline-prod.yaml
+                Capabilities: CAPABILITY_IAM
+              RunOrder: 1
+
+            - Name: ExecuteGlobalChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              Configuration:
+                ActionMode: CHANGE_SET_EXECUTE
+                ChangeSetName: globalchangeset
+                RoleArn: !ImportValue CloudFormationRole
+                StackName: !Sub SourceCodeOutputArtifact::configuration/cloudformation/global/global.yaml
+                Capabilities: CAPABILITY_IAM
+              RunOrder: 2
+            
+            - Name: ExecuteVpcChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              Configuration:
+                ActionMode: CHANGE_SET_EXECUTE
+                ChangeSetName: vpcchangeset
+                RoleArn: !ImportValue CloudFormationRole
+                StackName: !Sub SourceCodeOutputArtifact::configuration/cloudformation/infra/vpc.yaml
+                Capabilities: CAPABILITY_IAM
+              RunOrder: 3
+            
+            - Name: ExecuteEcsChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              Configuration:
+                ActionMode: CHANGE_SET_EXECUTE
+                ChangeSetName: vpcchangeset
+                RoleArn: !ImportValue CloudFormationRole
+                StackName: !Sub SourceCodeOutputArtifact::configuration/cloudformation/infra/ecs.yaml
+                Capabilities: CAPABILITY_IAM
+              RunOrder: 4
+        
+
 
 Outputs:
   CodePipelineBucket:
